--- a/css/styles.css
+++ b/css/styles.css
@@ -108,12 +108,6 @@ a {
   background-color: var(--primary-text-color);
 }
 .button {
-  display: inline-block;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  padding: 10px, 32px;
-  min-width: 200px;
-
   background-color: var(--accent-text-color);
   color: #f5f4fa;
 
@@ -163,6 +157,13 @@ a {
   letter-spacing: 0.03em;
 }
 
+.p {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+}
+
 /* Paragraph */
 .paragraph {
   color: var(--title-text-color);
@@ -182,14 +183,13 @@ a {
 }
 .direction {
   color: #ffffff;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
 }
-
 /* Button two */
 .button-two {
-  display: inline-block;
-  border: 1px solid transparent;
-  border-radius: 4px;
-
   background-color: #f5f4fa;
   font-weight: 500;
   font-size: 1.6;
